Align text on cards. Fix overflow on travel part of main page.

--- a/views/main/index.css
+++ b/views/main/index.css
@@ -23,6 +23,7 @@ body{
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+        text-align: center;
         background: white;
         width: 300px;
         height: 300px;
@@ -95,4 +96,9 @@ body{
     background: rgb(196, 198, 192);
     height: 100vh;
     width: 100%;
+}
+
+#travel{
+    height: 100%;
+    overflow-y: auto;
 }
